# fplib

./: CMakeLists.txt  Doxyfile  README.md
src/: fplib.cpp  fplib.h  fpreference.cpp  fpreference.h
tests/: main.cpp  reftest.cpp  reftest.h  tests.pro
